--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Not Tetris</title>
 </head>
 <link rel="stylesheet" href="./style.css">
 <body>
     <div id="root"></div>
+    <div id="debug"></div>
     <script src="./script.js"></script>
 </body>
 </html>
