colors and dots

--- a/index.html
+++ b/index.html
@@ -9,33 +9,43 @@
   </head>
 
   <body>
-    <div id="root"></div>
-    <div id="preview">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+    <div id="game">
+      <table>
+        <tbody id="root"></tbody>
+      </table>
+      <div id="controls">
+        <button id="pause">Pause</button>
+        <div class="points"></div>
       </div>
     </div>
+    <table>
+      <tbody id="preview">
+        <tr class="row">
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+        </tr>
+        <tr class="row">
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+        </tr>
+        <tr class="row">
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+        </tr>
+        <tr class="row">
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+          <td class="col"></td>
+        </tr>
+      </tbody>
+    </table>
     <div id="debug"></div>
     <script src="./script.js"></script>
   </body>
